fix: add field airport to sensor config files

--- a/configs/sensor-pressure-config.yaml
+++ b/configs/sensor-pressure-config.yaml
@@ -3,5 +3,5 @@ mqtt:
   port: 1883
   qos: 2
   id: sensor-pressure-123
-api:
-  key: 00565729182a4505881b8e47a5
+sensor.airport: KJFK
+api.key: 00565729182a4505881b8e47a5
