--- a/configs/sensor-wind-config.yaml
+++ b/configs/sensor-wind-config.yaml
@@ -2,10 +2,11 @@ mqtt:
   url: ssl://5891f12726364e0cbda5ae805fad5a45.s2.eu.hivemq.cloud
   port: 8883
   qos: 2
-  id: sensor-wind-123
+  id: sensor-wind
   login: tparchid
   password: IMTAtlantique44
 api:
+  use: true
   key: 00565729182a4505881b8e47a5
 sensor:
   airport: KJFK
